--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^10.12.2",
     "lottie-ios": "^3.2.3",
     "lottie-react-native": "^6.7.0",
     "react": "18.2.0",
