--- a/package.json
+++ b/package.json
@@ -15,30 +15,36 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.2",
-    "expo": "~51.0.9",
+    "expo": "~51.0.11",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.6",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
-    "expo-splash-screen": "~0.27.4",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
+    "expo-system-ui": "~3.0.6",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.12.2",
     "lottie-ios": "^3.2.3",
     "lottie-react-native": "^6.7.0",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-ionicons": "^4.6.5",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-masonry-list": "^2.16.1",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
